doctor and active field
