# api.yaml
@@ -11,8 +11,8 @@ tags:
     description: Endpoints related to patient operations
   - name: Payment
     description: Endpoints related to payment operations
-  - name: Admin
-    description: Endpoints related to admin operations
+  # - name: Admin
+  #   description: Endpoints related to admin operations
 
 host: manipal-server.onrender.com
 # host: localhost:8000
@@ -298,6 +298,102 @@ paths:
             example:
               msg: "Internal server error"
 
+  /api/doctors/all_doctors/:
+    get:
+      tags:
+        - doctor
+      summary: Get all doctors
+      responses:
+        200:
+          description: Successful response
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/Doctor"
+
+  /api/doctors/add_doctor/:
+    post:
+      tags:
+        - doctor
+      summary: Create a new doctor
+      parameters:
+        - in: body
+          name: doctor
+          description: Doctor data to create
+          required: true
+          schema:
+            $ref: "#/definitions/Doctor"
+      responses:
+        201:
+          description: Doctor created successfully
+          schema:
+            $ref: "#/definitions/Doctor"
+
+  /api/doctors/{id}:
+    get:
+      tags:
+        - doctor
+      summary: Get a doctor by ID
+      parameters:
+        - name: id
+          in: path
+          description: ID of the doctor to retrieve
+          required: true
+          type: string
+      responses:
+        200:
+          description: Successful response
+          schema:
+            $ref: "#/definitions/Doctor"
+        404:
+          description: Doctor not found
+          schema:
+            type: object
+            properties:
+              error:
+                type: string
+
+    patch:
+      tags:
+        - doctor
+      summary: Update a doctor by ID
+      parameters:
+        - name: id
+          in: path
+          description: ID of the doctor to update
+          required: true
+          type: string
+        - in: body
+          name: doctor
+          description: Doctor data to update
+          required: true
+          schema:
+            $ref: "#/definitions/Doctor"
+      responses:
+        200:
+          description: Update successful
+          schema:
+            $ref: "#/definitions/Doctor"
+
+    delete:
+      tags:
+        - doctor
+      summary: Delete a doctor by ID
+      parameters:
+        - name: id
+          in: path
+          description: ID of the doctor to delete
+          required: true
+          type: string
+      responses:
+        200:
+          description: Deletion successful
+          schema:
+            type: object
+            properties:
+              status:
+                type: string
+
 definitions:
   User:
     required:
@@ -340,6 +436,9 @@ definitions:
       email:
         type: string
         default: "NA"
+      active:
+        type: string
+        default: false
       IdProof:
         type: object
         properties:
@@ -403,3 +502,37 @@ definitions:
       - patientId
       - paymentType
       - amount
+
+  Doctor:
+    type: object
+    properties:
+      name:
+        type: string
+      specialty:
+        type: string
+      email:
+        type: string
+        format: email
+      phone:
+        type: integer
+        format: int64
+      address:
+        type: string
+      availability:
+        type: object
+        properties:
+          days:
+            type: array
+            items:
+              type: string
+          hours:
+            type: object
+            properties:
+              start:
+                type: string
+              end:
+                type: string
+    required:
+      - name
+      - phone
+      - address
